<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="cm.trixobase.telephone.domain.fragment.MenuTerm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <TextView
                style="@style/TitlePolicy"
                android:text="@string/policy_title_1" />

            <TextView
                style="@style/TextPolicy"
                android:text="@string/policy_text_1"/>

            <TextView
                style="@style/TitlePolicy"
                android:text="@string/policy_title_2" />

            <TextView
                style="@style/TextPolicy"
                android:text="@string/policy_text_2" />

            <TextView
                style="@style/TitlePolicy"
                android:text="@string/policy_title_3" />

            <TextView
                style="@style/TextPolicy"
                android:text="@string/policy_text_3"
                android:layout_marginBottom="110dp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
