<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/action_contact" />
        <item
            android:id="@+id/nav_utility"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/action_utility" />
    </group>

    <item android:title="@string/label_text_infos">
        <menu>
            <item
                android:id="@+id/nav_koko"
                android:icon="@drawable/iv_no"
                android:title="@string/action_about" />
        </menu>
    </item>

</menu>
