<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/sc_dialog">

    <LinearLayout
        android:id="@+id/ll_dialog_title_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical|start"
        android:padding="15dp"
        android:orientation="horizontal"
        android:background="@drawable/sc_dialog_title">

        <ImageView
            android:id="@+id/iv_dialog_title_id"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_contact"/>

        <TextView
            android:id="@+id/tv_dialog_title_id"
            style="@style/TextView_Main_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="bottom"
            android:text="@string/dialog_title_contact"
            android:fontFamily="@font/sofia"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="224dp">

    <LinearLayout
        android:id="@+id/ll_dialog_body_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sc_dialog_body"
        android:padding="17dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_form_name"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="-6dp"/>

        <EditText
            android:id="@+id/et_form_name_id"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_form_surname"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/et_form_surname_id"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_form_number"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_form_number_id"
            style="@style/EditText"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_form_email"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_form_email_id"
            style="@style/EditText"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_form_town"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_form_town_id"
            style="@style/EditText"
            android:inputType="textAutoCorrect"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_form_country"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_form_country_id"
            style="@style/EditText"
            android:inputType="textAutoCorrect"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_dialog_button_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/sc_dialog_button"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/bt_dialog_no_id"
            style="@style/Button"
            android:layout_width="95dp"
            android:text="@string/label_text_dialog_no"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/bt_dialog_yes_id"
            style="@style/Button"
            android:layout_width="95dp"
            android:layout_marginLeft="12dp"
            android:text="@string/label_text_save"
            tools:ignore="MissingConstraints"/>
    </LinearLayout>

</LinearLayout>